--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,9 +4,17 @@ phases:
   install:
     commands:
       - npm install
+      - sudo apt update
+      - sudo apt install ruby-full
+      - sudo apt install wget
   build:
     commands:
       - npm test
+      - cd /home/ubuntu
+      - wget https://aws-codedeploy-us-east-1.s3.us-east-1.amazonaws.com/latest/install
+      - chmod +x ./install
+      - sudo ./install auto
+      - sudo service codedeploy-agent status
 artifacts:
   files:
     - '**/*'
