--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,9 +4,9 @@ phases:
   install:
     commands:
       - npm install
-      - sudo yum update
-      - sudo yum install ruby
-      - sudo yum install wget
+      - yum update
+      - yum install ruby
+      - yum install wget
       - echo "#!/bin/bash CODEDEPLOY_BIN="/opt/codedeploy-agent/bin/codedeploy-agent" $CODEDEPLOY_BIN stop yum erase codedeploy-agent -y"
   build:
     commands:
@@ -14,8 +14,8 @@ phases:
       - cd /home/ec2-user
       - wget https://aws-codedeploy-us-east-1.s3.us-east-1.amazonaws.com/latest/install
       - chmod +x ./install
-      - sudo ./install auto
-      - sudo service codedeploy-agent status
+      - ./install auto
+      - service codedeploy-agent status
 artifacts:
   files:
     - '**/*'
